# embedded

./: .gdbinit  Cargo.toml  README.md
src/: main.rs
