[package]
name = "embedded"
version = "0.1.0"
authors = ["zhanghe <zhanghecool@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
panic-halt = "0.2.0"
stm32f103xx = "0.11"
