[package]
name = "embedded"
version = "0.1.0"
authors = ["zhanghe <zhanghecool@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
nb = "0.1.2"

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]
